Adding a timeout field to the "Create Job" tab, modified the create_job RPC to handle a "timeout" argument, and added a "timeout" column to the AUTOTEST_WEB database. Sets how long a job should run until it is automatically aborted.

--- a/global_config.ini
+++ b/global_config.ini
@@ -14,11 +14,14 @@ database: autotest_web
 db_type: mysql
 user: autotest
 password: mypassword
+job_timeout_default: 72
 
 [SCHEDULER]
 notify_email:
 max_running_jobs: 1000
 max_jobs_started_per_cycle: 100
+tick_pause_sec: 5
+clean_interval_minutes: 60
 
 [HOSTS]
 wait_up_processes:
