-added readonly_connection.py, which opens a second DB connection using readonly credentials found in the global config -added special QuerySet subclasses to model_logic that wrap DB access in a readonly connection -made query_objects wrap the DB access in a readonly connection when given extra_args or extra_where (which can contain arbitrary SQL from the user) -got rid of unnecessary call to query_objects
git-svn-id: svn://test.kernel.org/autotest/trunk@1775 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/global_config.ini
+++ b/global_config.ini
@@ -2,8 +2,10 @@
 host: localhost
 database: tko
 db_type: mysql
-user: nobody
+user:
 password:
+readonly_user: nobody
+readonly_password:
 query_timeout: 3600
 min_retry_delay: 20
 max_retry_delay: 60
