Change default to repair anything we can
Signed-off-by: Martin J. Bligh <mbligh@google.com>



git-svn-id: svn://test.kernel.org/autotest/trunk@1822 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/global_config.ini
+++ b/global_config.ini
@@ -27,4 +27,4 @@ clean_interval_minutes: 60
 
 [HOSTS]
 wait_up_processes:
-default_protection: REPAIR_FILESYSTEM_ONLY
+default_protection: NO_PROTECTION
