--- a/client/profilers/catprofile/control
+++ b/client/profilers/catprofile/control
@@ -1,3 +1,3 @@
 job.profilers.add('catprofile', ['/proc/meminfo','/proc/uptime'], 'meminfo', 2)
-job.run_test('sleeptest', 5)
+job.run_test('sleeptest', seconds=5)
 job.profilers.delete('catprofile')
