--- a/client/profilers/readprofile/control
+++ b/client/profilers/readprofile/control
@@ -1,3 +1,3 @@
 job.profilers.add('readprofile')
-job.run_test('sleeptest', 1)
+job.run_test('sleeptest', seconds=1)
 job.profilers.delete('readprofile')
