Rate limit the final parse of the scheduler.  If more than 100 or so run at a time, it will bring mysql to its knees (for no good reason...all actions are on different jobs).
Risk: High
Visibility: Medium (things will work better on big jobs)

Signed-off-by: Jeremy Orlow <jorlow@google.com>


git-svn-id: svn://test.kernel.org/autotest/trunk@2089 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/global_config.ini
+++ b/global_config.ini
@@ -22,6 +22,7 @@ job_timeout_default: 72
 notify_email:
 max_running_jobs: 1000
 max_jobs_started_per_cycle: 100
+max_parse_processes: 5
 tick_pause_sec: 5
 clean_interval_minutes: 60
 
