Allow a different host for readonly connections.
Signed-off-by: Jeremy Orlow <jorlow@google.com>


git-svn-id: svn://test.kernel.org/autotest/trunk@2131 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/global_config.ini
+++ b/global_config.ini
@@ -4,6 +4,7 @@ database: tko
 db_type: mysql
 user: nobody
 password:
+readonly_host: localhost
 readonly_user: nobody
 readonly_password:
 query_timeout: 3600
