Attached is a large patch for a powerful and flexible new graphing system for new TKO.  This system subsumes all the previous kernel graphing scripts under the tko/ directory and is capable of much more.  These wiki pages document usage of the new system and give an idea of what it's capable of:
http://autotest.kernel.org/wiki/MetricsPlot
http://autotest.kernel.org/wiki/MachineQualHistograms

Feel free to try it out and please let us know if you run into any trouble.

This system is the work of our summer intern James Ren.  Thank you for all your fantastic work, James!

From: James Ren <jamesren@stanford.edu>

--- a/global_config.ini
+++ b/global_config.ini
@@ -10,6 +10,7 @@ readonly_password:
 query_timeout: 3600
 min_retry_delay: 20
 max_retry_delay: 60
+graph_cache_creation_timeout_minutes: 10
 
 [AUTOTEST_WEB]
 host: localhost
