Added email_list field to front end. On job completion emails on this list will be notified of the completion. Also the function send_email in manage_db.py adds the ability to put a delimited email list in global_settings.py rather than just a single email.
Signed-off-by: Bryce Boe <bboe@google.com>

--- a/global_config.ini
+++ b/global_config.ini
@@ -19,6 +19,7 @@ db_type: mysql
 user: autotest
 password: mypassword
 job_timeout_default: 72
+base_url: http://your_autotest_server/afe/
 
 [SCHEDULER]
 notify_email:
