Set the default passwords to something that more clearly indicates that you really should change them.
Signed-off-by: John Admanski <jadmanski@google.com>

--- a/global_config.ini
+++ b/global_config.ini
@@ -2,8 +2,8 @@
 host: localhost
 database: tko
 db_type: mysql
-user: nobody
-password:
+user: autotest
+password: please_set_this_password
 readonly_host: localhost
 readonly_user: nobody
 readonly_password:
@@ -17,7 +17,7 @@ host: localhost
 database: autotest_web
 db_type: mysql
 user: autotest
-password: mypassword
+password: please_set_this_password
 job_timeout_default: 72
 base_url: http://your_autotest_server/afe/
 
