Add job start timeout for synchronous jobs.  This timeout applies to synchronous jobs that are holding a public pool machine (i.e. in the Everyone ACL) as "Pending".  This includes a new global config option, scheduler code to enforce the timeout and a unit test.
Note that the new scheduler code uses the Django models instead of making DB queries directly.  This is a first example of how the scheduler can use the models to simplify DB interaction and reuse code from the frontend.  I'd like to move in this direction from now on, although I certainly won't be making any sweeping changes to rewrite existing code.

--- a/global_config.ini
+++ b/global_config.ini
@@ -28,6 +28,7 @@ max_jobs_started_per_cycle: 100
 max_parse_processes: 5
 tick_pause_sec: 5
 clean_interval_minutes: 60
+synch_job_start_timeout_minutes: 150
 
 [HOSTS]
 wait_up_processes:
