* allow scheduler email "from" address to be specified in global config * allow global config to specify statuses which should trigger immediate emails (in addition to email upon job completion) * make "Parsing" an active=complete=0 status, and modify Job.num_complete() appropriately * restructuring of scheduler email notification code to only email at the right time and to include a more informative message

--- a/global_config.ini
+++ b/global_config.ini
@@ -23,6 +23,8 @@ base_url: http://your_autotest_server/afe/
 
 [SCHEDULER]
 notify_email:
+notify_email_from:
+notify_email_statuses: Completed,Failed,Aborted
 max_running_jobs: 1000
 max_jobs_started_per_cycle: 100
 max_parse_processes: 5
