Change the server side sleeptest control file to be parallelizable, and add a host object to it. The test is just supposed be a quick run-through of the basic test-running infrastructure, but if we run it without parallel or even creating a host object then it's running in a manner completely different from pretty much every other test.
Risk: Low
Visibility: Sleeptest now hits all the base infrastructure used by
server tests

Signed-off-by: John Admanski <jadmanski@google.com>

--- a/server/tests/sleeptest/control
+++ b/server/tests/sleeptest/control
@@ -10,4 +10,8 @@ DOC = """
 runs sleep for one second on the list of machines.
 """
 
-job.run_test('sleeptest')
+def run(machine):
+    host = hosts.create_host(machine)
+    job.run_test('sleeptest')
+
+job.parallel_simple(run, machines)
