Add entries to the config file to control which server is used rather than hardcoding the autotest hostname in the code.
Signed-off-by: Gregory Smith <gps@google.com>



git-svn-id: svn://test.kernel.org/autotest/trunk@2569 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/global_config.ini
+++ b/global_config.ini
@@ -19,7 +19,11 @@ db_type: mysql
 user: autotest
 password: please_set_this_password
 job_timeout_default: 72
-base_url: http://your_autotest_server/afe/
+# Only set this if your server is not 'http://[SERVER] hostname/afe/'
+#base_url: http://your_autotest_server/afe/
+
+[SERVER]
+hostname: autotest
 
 [SCHEDULER]
 notify_email:
