Attached is a very large patch that adds support for running a distributed Autotest service.  Previously, the scheduler could only execute autoservs locally and all results were written directly to the local filesystem.  This placed a limit on the number of machines that could be concurrently tested by a single Autotest service instance due to the strain of running many autoserv processes on a single machine.
With this change, the scheduler can spread autoserv processes among a
number of machines and gather all results to a single results
repository machine.  This allows vastly improved scalability for a
single Autotest service instance.  See
http://autotest.kernel.org/wiki/DistributedServerSetup for more
details.

Note that the single-server setup is still supported and the global
configuration defaults to this setup, so existing service instances
should continue to run.

Steve

Signed-off-by: Steve Howard <showard@google.com>




git-svn-id: svn://test.kernel.org/autotest/trunk@2596 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/global_config.ini
+++ b/global_config.ini
@@ -32,9 +32,13 @@ notify_email_statuses: Completed,Failed,Aborted
 max_running_jobs: 1000
 max_jobs_started_per_cycle: 100
 max_parse_processes: 5
+max_transfer_processes: 50
 tick_pause_sec: 5
 clean_interval_minutes: 60
 synch_job_start_timeout_minutes: 150
+drones: localhost
+drone_installation_directory: /usr/local/autotest
+results_host: localhost
 
 [HOSTS]
 wait_up_processes:
