Make maximum process throttling configurable on a per-drone basis.
Signed-off-by: Steve Howard <showard@google.com>

--- a/global_config.ini
+++ b/global_config.ini
@@ -29,7 +29,7 @@ hostname: autotest
 notify_email:
 notify_email_from:
 notify_email_statuses: Completed,Failed,Aborted
-max_running_jobs: 1000
+max_processes_per_drone: 1000
 max_jobs_started_per_cycle: 100
 max_parse_processes: 5
 max_transfer_processes: 50
