--- a/client/debug.ini
+++ b/client/debug.ini
@@ -1,6 +1,6 @@
 [debug]
-tests = INFO
-client = INFO
-server = INFO
-utils = INFO
+tests = DEBUG
+client = DEBUG
+server = DEBUG
+utils = DEBUG
 scheduler = DEBUG
