--- a/scheduler/debug_babysitter.ini
+++ b/scheduler/debug_babysitter.ini
@@ -28,4 +28,5 @@ format=[%(asctime)s - %(levelname)-8s] %(message)s
 datefmt=%H:%M:%S
 
 [formatter_file_formatter]
-format=[%(asctime)s - %(module)-15s - %(levelname)-8s] %(message)s
+format=[%(asctime)s %(levelname)s %(module)s] %(message)s
+datefmt=%m/%d %H:%M:%S
