This gives us fixed width, and saves some space.
Signed-off-by: Martin J. Bligh <mbligh@google.com>

--- a/scheduler/debug_scheduler.ini
+++ b/scheduler/debug_scheduler.ini
@@ -24,9 +24,9 @@ formatter=file_formatter
 args=(os.path.join(os.environ['AUTOTEST_SCHEDULER_LOG_DIR'], os.environ['AUTOTEST_SCHEDULER_LOG_NAME']), 'w')
 
 [formatter_console_formatter]
-format=[%(asctime)s - %(levelname)-8s] %(message)s
+format=[%(asctime)s %(levelname)-5.5s] %(message)s
 datefmt=%H:%M:%S
 
 [formatter_file_formatter]
-format=[%(asctime)s %(levelname)s %(module)s] %(message)s
+format=[%(asctime)s %(levelname)-5.5s %(module)s] %(message)s
 datefmt=%m/%d %H:%M:%S
