--- a/server/debug_server.ini
+++ b/server/debug_server.ini
@@ -21,7 +21,7 @@ args=(sys.stdout,)
 class=FileHandler
 level=DEBUG
 formatter=file_formatter
-args=(os.path.join(os.environ['AUTOSERV_RESULTS'], 'server.log'), 'w')
+args=(os.path.join(os.environ['AUTOSERV_RESULTS'], 'server.log'), 'a')
 
 [formatter_console_formatter]
 format=[%(asctime)s %(levelname)-5.5s] %(message)s
