Change the client, babysitter, scheduler logging configs to append to the file log instead of overwriting, like in the server config.
Risk: Low
Visibility: Changes the logger to append to existing files.

Signed-off-by: John Admanski <jadmanski@google.com>

--- a/scheduler/debug_babysitter.ini
+++ b/scheduler/debug_babysitter.ini
@@ -21,7 +21,7 @@ args=(sys.stdout,)
 class=FileHandler
 level=DEBUG
 formatter=file_formatter
-args=(os.path.join(os.environ['AUTOTEST_BABYSITTER_LOG_DIR'], os.environ['AUTOTEST_BABYSITTER_LOG_NAME']), 'w')
+args=(os.path.join(os.environ['AUTOTEST_BABYSITTER_LOG_DIR'], os.environ['AUTOTEST_BABYSITTER_LOG_NAME']), 'a')
 
 [formatter_console_formatter]
 format=[%(asctime)s %(levelname)-5.5s] %(message)s
