--- a/client/debug_client.ini
+++ b/client/debug_client.ini
@@ -21,7 +21,7 @@ args=(sys.stdout,)
 class=FileHandler
 level=DEBUG
 formatter=file_formatter
-args=(os.path.join(os.environ['AUTOTEST_RESULTS'], 'client.log'), 'w')
+args=(os.path.join(os.environ['AUTOTEST_RESULTS'], 'client.log'), 'a')
 
 [formatter_console_formatter]
 format=[%(asctime)s %(levelname)-5.5s] %(message)s
