Add job option for whether or not to parse failed repair results as part of a job, with a default value in global_config.  Since the number of options associated with a job is getting out of hand, I packaged them up into a dict in the RPC entry point and passed them around that way from then on.
Signed-off-by: Steve Howard <showard@google.com>

--- a/global_config.ini
+++ b/global_config.ini
@@ -19,6 +19,7 @@ db_type: mysql
 user: autotest
 password: please_set_this_password
 job_timeout_default: 72
+parse_failed_repair_default: 0
 # Only set this if your server is not 'http://[SERVER] hostname/afe/'
 #base_url: http://your_autotest_server/afe/
 
