Update debug_scheduler logging config to use INFO instead of debug. this stops us from seeing pickle data printed out in the scheduler logs by default
Signed-off-by: Scott Zawalski <scottz@google.com>

--- a/scheduler/debug_scheduler.ini
+++ b/scheduler/debug_scheduler.ini
@@ -8,7 +8,7 @@ keys=console_handler,file_handler
 keys=console_formatter,file_formatter
 
 [logger_root]
-level=DEBUG
+level=INFO
 handlers=console_handler,file_handler
 
 [handler_console_handler]
