Add an option to global config to disable to the scheduler isn't accidentally started on drones.
Signed-off-by: Scott Zawalski <scottz@google.com>

--- a/global_config.ini
+++ b/global_config.ini
@@ -28,6 +28,7 @@ parse_failed_repair_default: 0
 hostname: autotest
 
 [SCHEDULER]
+enable_scheduler: True
 notify_email:
 notify_email_from:
 notify_email_statuses: Completed,Failed,Aborted
