Have the scheduler wait a configurable amount of time before starting atomic group jobs as soon as minimum synch count hosts are available in Pending state up until AtomicGroup.max_number_of_hosts are available.
Adds a DelayedCallTask class to monitor_db along with logic in the Job
class to use this to delay the job becoming ready to run for a little
while as well as making sure the job is run at the end of the delay
without needing to wait for another host to change state.

Signed-off-by: Gregory Smith <gps@google.com>

--- a/global_config.ini
+++ b/global_config.ini
@@ -42,6 +42,7 @@ synch_job_start_timeout_minutes: 150
 drones: localhost
 drone_installation_directory: /usr/local/autotest
 results_host: localhost
+secs_to_wait_for_atomic_group_hosts: 600
 
 [HOSTS]
 wait_up_processes:
