--- a/client/profilers/blktrace/control
+++ b/client/profilers/blktrace/control
@@ -1,3 +1,3 @@
-job.profilers.add('blktrace', disk='/dev/hda3')
+job.profilers.add('blktrace', device='/dev/hda3')
 job.run_test('sleeptest', seconds=1)
 job.profilers.delete('blktrace')
